@@ -140,6 +140,7 @@ struct _PrefsCommon
 	gboolean linewrap_quote;
 	gboolean linewrap_pastes;
 	gboolean autowrap;
+	gboolean auto_indent;
 	gboolean auto_exteditor;
 	gboolean reply_account_autosel;
 	gboolean default_reply_list;
